--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Salopensource.GitHub.io by salopensource</title>
+    <title>Sal by salopensource</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>Salopensource.GitHub.io</h1>
+          <h1>Sal</h1>
           <h2></h2>
         </header>
 
